Resolves: tdf#96092 crash on activating manage changes sidebar

Change-Id: I39ab778114e2317ac471e92f9441ed4a83e7023b
(cherry picked from commit 296a67874a9e5ee1f93a38716e996207b1d2b59f)